--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -14,7 +14,10 @@
       </tr>
       <tr ng-show="grid.quickFilterShown">
         <th ng-repeat="field in grid.fields">
-          <input type="text" name="name" value="" ng-model="grid.filters[field.name]" ng-change="grid.filterBy(field.name)" ng-style="{width: (field.width - 20) + 'px'}" />
+          <mn-qf-text model="grid.filters[field.name]"
+                      qf-changed="grid.filterBy(fieldName)"
+                      field="field"
+                      focus="grid.quickFilterFocus === field.name" />
         </th>
       </tr>
     </thead>
