--- a/app/assets/javascripts/mohican/directives/mnGridPager/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGridPager/template.html
@@ -1,17 +1,19 @@
-<div class="row pager-row" ng-class='{hidden: !vm.pagesCount}'>
+<div class="row pager-row" ng-class="{hidden: !gridPager.pagesCount}">
   <div class="col-lg-5">
     <nav class="pointer">
-      <ul class="pointer pagination pagination-sm" style="margin: 0px 30px;">
-        <li class="pointer" ng-class='{disabled: vm.currentPage == 1}'>
-          <a ng-click="vm._changePage(vm.prevPage)" aria-label="Previous">
+      <ul class="pointer pagination pagination-sm"
+          style="margin: 0px 30px;"
+          ng-class="{'client-pager': gridPager.clientViewPagerStyle}">
+        <li class="pointer" ng-class='{disabled: gridPager.currentPage == 1}'>
+          <a ng-click="gridPager._changePage(gridPager.prevPage)" aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
           </a>
         </li>
-        <li class="pointer" ng-repeat="pageNumber in vm.paginationArray()" ng-class="{active: pageNumber == vm.currentPage}">
-          <a ng-click="vm._changePage(pageNumber)">{{vm.showPageNumber(pageNumber, $index)}}</a>
+        <li class="pointer" ng-repeat="pageNumber in gridPager.paginationArray()" ng-class="{active: pageNumber == gridPager.currentPage}">
+          <a ng-click="gridPager._changePage(pageNumber)">{{gridPager.showPageNumber(pageNumber, $index)}}</a>
         </li>
-        <li class="pointer" ng-class="{disabled: vm.currentPage == vm.pagesCount, hidden: !vm.pagesCount}">
-          <a ng-click="vm._changePage(vm.nextPage)" aria-label="Next">
+        <li class="pointer" ng-class="{disabled: gridPager.currentPage == gridPager.pagesCount, hidden: !gridPager.pagesCount}">
+          <a ng-click="gridPager._changePage(gridPager.nextPage)" aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
           </a>
         </li>
