--- a/app/assets/javascripts/mohican/directives/mnGridPager/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGridPager/template.html
@@ -9,8 +9,18 @@
             <span aria-hidden="true">&laquo;</span>
           </a>
         </li>
+        <li>
+          <a ng-click="gridPager._changePage(1)"
+             ng-class="{hidden: !gridPager.showLinkFirst()}"
+             aria-label="First">1</a>
+        </li>
         <li class="pointer" ng-repeat="pageNumber in gridPager.paginationArray()" ng-class="{active: pageNumber == gridPager.currentPage}">
           <a ng-click="gridPager._changePage(pageNumber)">{{gridPager.showPageNumber(pageNumber, $index)}}</a>
+        </li>
+        <li>
+          <a ng-click="gridPager._changePage(gridPager.pagesCount)"
+             ng-class="{hidden: !gridPager.showLinkLast()}"
+             aria-label="Last">{{gridPager.pagesCount}}</a>
         </li>
         <li class="pointer" ng-class="{disabled: gridPager.currentPage == gridPager.pagesCount, hidden: !gridPager.pagesCount}">
           <a ng-click="gridPager._changePage(gridPager.nextPage)" aria-label="Next">
