--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -14,10 +14,18 @@
       </tr>
       <tr ng-show="grid.quickFilterShown">
         <th ng-repeat="field in grid.fields">
-          <mn-qf-text model="grid.filters[field.name]"
-                      qf-changed="grid.filterBy(fieldName)"
-                      field="field"
-                      focus="grid.quickFilterFocus === field.name" />
+          <mn-qf-text
+                ng-if="field.quickfilter === 'text'"
+                model="grid.filters[field.name]"
+                qf-changed="grid.filterBy(fieldName)"
+                field="field"
+                focus="grid.quickFilterFocus === field.name"></mn-qf-text>
+          <mn-qf-date-range
+                ng-if="field.quickfilter === 'date-range'"
+                model="grid.filters[field.name]"
+                qf-changed="grid.filterBy(fieldName)"
+                field="field"
+                focus="grid.quickFilterFocus === field.name"></mn-qf-date>
         </th>
       </tr>
     </thead>
