pagesCount to pageCount
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -22,7 +22,7 @@
                service-data-loaded='ctrl.resolve.fullyLoaded'>
       </mn-grid>
       <mn-grid-pager page-changed='ctrl.getPage(page)'
-                     pages-count='ctrl.pagesCount'
+                     page-count='ctrl.pageCount'
                      current-page='ctrl.page'
                      client-view-pager-style='!!ctrl.filters && ctrl.resolve.fullyLoaded'>
       </mn-grid-pager>
