date range url/json params conversion
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnQfDateRange/template.html
+++ b/app/assets/javascripts/mohican/directives/mnQfDateRange/template.html
@@ -1,5 +1,5 @@
 <input type="text"
        date-range-picker class="form-control date-picker"
-       ng-model="qfDateRange.date"
+       ng-model="qfDateRange.model"
        ng-change="qfDateRange.inputChanged()"
        ng-style="{width: (qfDateRange.field.width - 20) + 'px'}" />
