fix: random inspiration
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -14,12 +14,7 @@
       </tr>
       <tr ng-show="grid.quickFilterShown">
         <th ng-repeat="field in grid.fields">
-          <mn-qf-select
-                ng-if="field.quickfilter === 'select'"
-                model="grid.filters[field.name]"
-                qf-changed="grid.filterBy(fieldName)"
-                field="field"
-                focus="grid.quickFilterFocus === field.name"></mn-qf-select>
+
           <mn-qf-text
                 ng-if="field.quickfilter === 'text'"
                 model="grid.filters[field.name]"
@@ -31,7 +26,13 @@
                 model="grid.filters[field.name]"
                 qf-changed="grid.filterBy(fieldName)"
                 field="field"
-                focus="grid.quickFilterFocus === field.name"></mn-qf-date>
+                focus="grid.quickFilterFocus === field.name"></mn-qf-date-range>
+          <mn-qf-select
+                ng-if="field.quickfilter === 'select'"
+                model="grid.filters[field.name]"
+                qf-changed="grid.filterBy(fieldName)"
+                field="field"
+                focus="grid.quickFilterFocus === field.name"></mn-qf-select>
         </th>
       </tr>
     </thead>
