mn-qf-select - multi select mode:sunglasses:
I :heart: this game :basketball:

Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnQfSelect/template.html
+++ b/app/assets/javascripts/mohican/directives/mnQfSelect/template.html
@@ -1,11 +1,10 @@
 <span isteven-multi-select
      class="inline-multi-select"
-     input-model="qfSelect.selectValues"
+     input-model="qfSelect.selectItems"
      on-item-click="qfSelect.inputChanged(data.name)"
-     output-model="qfSelect.outputBrowsers"
-     button-label="show"
-     item-label="name desc"
+     output-model="qfSelect.selectedValues"
+     button-label="name"
+     item-label="name"
      tick-property="selected"
-     selection-mode="single"
      helper-elements="">
 </span>
