select filter css
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnQfSelect/template.html
+++ b/app/assets/javascripts/mohican/directives/mnQfSelect/template.html
@@ -1,5 +1,5 @@
 <span isteven-multi-select
-     class="inline-multi-select"
+     class="inline-multi-select mn-select-filter"
      input-model="qfSelect.selectItems"
      on-item-click="qfSelect.inputChanged(data.name)"
      output-model="qfSelect.selectedValues"
