--- a/app/assets/javascripts/mohican/directives/mnQfText/template.html
+++ b/app/assets/javascripts/mohican/directives/mnQfText/template.html
@@ -1,4 +1,6 @@
 <input type="text"
        ng-model="qfText.model"
        ng-change="qfText.inputChanged()"
-       ng-style="{width: (qfText.field.width - 20) + 'px'}" />
+       ng-style="{width: (qfText.field.width) + 'px'}"
+       style="height: 34px;"
+       class="form-control" />
