stabilize the grid on exact width
The width is given by the backend, if it is too narrow, we just
chop off what doesn't fit. This meant that we had to also set
width on the inner documents.

The hope is that some day table can be replaced with something
else, such as simply divs, andmaybe some JS width management.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -5,15 +5,20 @@
         <th ng-repeat="field in grid.fields"
             ng-class="{'mn-sortable': grid.serviceDataLoaded}"
             ng-click="grid.orderBy(field.name)"
-            ng-style="{width: field.width + 'px'}">
-          {{field.header}}
+            ng-style="{width: field.width + 'px'}"
+            class="grid-header-container">
+          <span class="grid-header-field-name"
+                ng-style="{width: (field.width - 18) + 'px'}">
+            {{field.header}}
+          </span>
           <span ng-show="grid.orderColumn === field.name && grid.serviceDataLoaded"
-                class="pull-right {{grid.orderDirection === 'desc' ? 'glyphicon glyphicon-arrow-up' : 'glyphicon glyphicon-arrow-down'}}"
+                class="pull-right grid-header-field-dir "
+                ng-class="grid.orderDirection === 'desc' ? 'glyphicon glyphicon-arrow-up' : 'glyphicon glyphicon-arrow-down'"
                 aria-hidden="true"></span>
         </th>
       </tr>
       <tr ng-show="grid.quickFilterShown">
-        <th ng-repeat="field in grid.fields">
+        <th ng-repeat="field in grid.fields" ng-style="{width: field.width + 'px'}">
           <mn-qf-text
                 ng-if="field.quickfilter === 'text'"
                 model="grid.filters[field.name]"
