client sort and filter loading notification
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -5,7 +5,9 @@
                      layouts='ctrl.layouts'
                      quick-filter-shown='ctrl.quickFilterShown'
                      quick-filter-toggled='ctrl.toggleQuickFilter(opened)'
-                     service-data-loaded='ctrl.resolve.fullyLoaded'>
+                     service-data-loaded='ctrl.resolve.fullyLoaded'
+                     clear-client-sort-and-filter='ctrl.clearClientSortAndFilter()'
+                     client-view-loading-notification='ctrl.clientViewLoadingNotification'>
       </mn-filter-bar>
     </div>
   </div>
