--- a/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
+++ b/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="col-sm-10 col-xs-9">
+  <div class="col-sm-1.1 col-xs-1">
     <div class="page-menu form-inline">
-      <span isteven-multi-select
+      <div isteven-multi-select
             class="inline-multi-select"
             input-model="filterBar.layouts"
             on-item-click="filterBar.layoutChanged({ layout: data.name })"
@@ -10,8 +10,13 @@
             item-label="name desc"
             tick-property="selected"
             selection-mode="single"
-            helper-elements="">
-      </span>
+            helper-elements=""
+            style="width: 132px;">
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-1 col-xs-1">
+    <div class="page-menu form-inline">
       <button type="button"
               class="btn filter-bar-button"
               ng-model="filterBar.quickFilterShown"
@@ -21,7 +26,17 @@
               btn-checkbox-false="false"
               ng-disabled="!filterBar.serviceDataLoaded">
         Quick Filter
+        <div class="loader" ng-show="!filterBar.serviceDataLoaded">Loading...</div>
       </button>
+    </div>
+  </div>
+  <div class="col-sm-5 col-xs-5">
+    <div class="alert alert-warning"
+         role="alert"
+         ng-show="!filterBar.serviceDataLoaded && filterBar.clientViewLoadingNotification">
+      <strong>Warning!</strong> You will be shown filtered and sorted data when
+      fully loaded or you can clear requested fiter and sort parameters
+      <button ng-click="filterBar.clearClientSortAndFilter()">here</button>
     </div>
   </div>
 </div>
