cache formated fields in original service buffer
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnViewField/template.html
+++ b/app/assets/javascripts/mohican/directives/mnViewField/template.html
@@ -1,5 +1,5 @@
 <div ng-style="{width: viewField.field.width + 'px'}" style="overflow: hidden">
   <span>
-    {{viewField.formatedModel()}}
+    {{viewField.model[viewField.field.name + '_formatted']}}
   </span>
 </div>
