--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -5,7 +5,7 @@
                      layouts='ctrl.layouts'
                      quick-filter-shown='ctrl.quickFilterShown'
                      quick-filter-toggled='ctrl.toggleQuickFilter(opened)'
-                     service-data-loaded='ctrl.resolve.fullyLoaded'
+                     service-data-loaded='ctrl.fullyLoaded'
                      clear-client-sort-and-filter='ctrl.clearClientSortAndFilter()'
                      client-view-loading-notification='ctrl.clientViewLoadingNotification'>
       </mn-filter-bar>
@@ -21,7 +21,7 @@
                client-view-changed='ctrl.getView(column, direction, filters, focus)'
                quick-filter-focus='ctrl.qfFocus'
                quick-filter-shown='ctrl.quickFilterShown'
-               service-data-loaded='ctrl.resolve.fullyLoaded'>
+               service-data-loaded='ctrl.fullyLoaded'>
         <mn-item-action item="3" label="print"></mn-item-action>
       </mn-grid>
       <mn-grid-pager page-changed='ctrl.getPage(page)'
