mn-item-reports download icons
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -22,7 +22,7 @@
                quick-filter-focus='ctrl.qfFocus'
                quick-filter-shown='ctrl.quickFilterShown'
                service-data-loaded='ctrl.fullyLoaded'>
-        <mn-item-action item="3" label="print"></mn-item-action>
+        <mn-item-reports></mn-item-reports>
       </mn-grid>
       <mn-grid-pager page-changed='ctrl.getPage(page)'
                      page-count='ctrl.pageCount'
