--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -16,7 +16,7 @@
                 ng-class="grid.orderDirection === 'desc' ? 'glyphicon glyphicon-arrow-up' : 'glyphicon glyphicon-arrow-down'"
                 aria-hidden="true"></span>
         </th>
-        <th style="width: 30px;">actions</th>
+        <th style="width: 40px;"></th>
       </tr>
       <tr ng-show="grid.quickFilterShown">
         <th ng-repeat="field in grid.fields" ng-style="{width: field.width + 'px'}">
