backend filter dropdown
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -3,6 +3,8 @@
     <div class="col-xs-12">
       <mn-filter-bar layout-changed='ctrl.getLayout(layout)'
                      layouts='ctrl.layouts'
+                     backend-filter-changed='ctrl.getBackendFilters(backendFilter)'
+                     backend-filters='ctrl.backendFilters'
                      quick-filter-shown='ctrl.quickFilterShown'
                      quick-filter-toggled='ctrl.toggleQuickFilter(opened)'
                      service-data-loaded='ctrl.fullyLoaded'
