fix: pager border is buffer is filtered
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -29,7 +29,7 @@
       <mn-grid-pager page-changed='ctrl.getPage(page)'
                      page-count='ctrl.pageCount'
                      current-page='ctrl.page'
-                     client-view-pager-style='!!ctrl.filters && ctrl.resolve.fullyLoaded'>
+                     client-view-pager-style='!!ctrl.filters && ctrl.fullyLoaded'>
       </mn-grid-pager>
     </div>
   </div>
