--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -51,7 +51,9 @@
             </span>
           </div>
         </td>
-        <td ng-transclude></td>
+        <td>
+          <mn-grid-actions/>
+        </td>
       </tr>
     </tbody>
   </table>
