--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -1,11 +1,12 @@
 <div mn-fill-height style="width: 100%; overflow:auto;">
-  <table class="table table-striped">
+  <table class="table table-striped" style="table-layout:fixed;">
     <thead>
       <tr>
+        <col ng-repeat="field in grid.fields" ng-style="{width: field.width + 'px'}"/>
+        <col style="width: 64px;">
         <th ng-repeat="field in grid.fields"
             ng-class="{'mn-sortable': grid.serviceDataLoaded}"
             ng-click="grid.orderBy(field.name)"
-            ng-style="{width: field.width + 'px'}"
             class="grid-header-container">
           <span class="grid-header-field-name"
                 ng-style="{width: (field.width - 18) + 'px'}">
@@ -16,10 +17,10 @@
                 ng-class="grid.orderDirection === 'desc' ? 'glyphicon glyphicon-arrow-up' : 'glyphicon glyphicon-arrow-down'"
                 aria-hidden="true"></span>
         </th>
-        <th style="width: 40px;"></th>
+        <th></th>
       </tr>
       <tr ng-show="grid.quickFilterShown">
-        <th ng-repeat="field in grid.fields" ng-style="{width: field.width + 'px'}">
+        <th ng-repeat="field in grid.fields">
           <mn-qf-text
                 ng-if="field.quickfilter === 'text'"
                 model="grid.filters[field.name]"
@@ -44,16 +45,14 @@
     </thead>
     <tbody>
       <tr ng-repeat="item in grid.items">
-        <td ng-repeat="field in grid.fields">
-          <div ng-style="{width: field.width + 'px'}" style="overflow: hidden">
+        <td ng-repeat="field in grid.fields" style="overflow: hidden;">
+          <div>
             <span>
               {{item[field.name + '_formatted']}}
             </span>
           </div>
         </td>
-        <td>
-          <mn-grid-actions/>
-        </td>
+        <td style="overflow: hidden;"><mn-grid-actions/><td>
       </tr>
     </tbody>
   </table>
