eslint engaged and upgraded
Decided comma-dangle is more annoying than useful. Especially
in some places in Angular.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -44,5 +44,5 @@
       </mn-grid-pager>
     </div>
   </div>
-  <iframe id="printf" name="printf" src="" style="display:none;"></iframe>
+  <iframe id="print-f" name="print-f" src="" style="display:none;"></iframe>
 </div>
