dry up filter bar
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -1,16 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12">
-      <mn-filter-bar layout-changed='ctrl.getLayout(layout)'
-                     layouts='ctrl.layouts'
-                     backend-filter-changed='ctrl.getBackendFilters(backendFilter)'
-                     backend-filters='ctrl.backendFilters'
-                     quick-filter-shown='ctrl.quickFilterShown'
-                     quick-filter-toggled='ctrl.toggleQuickFilter(opened)'
-                     service-data-loaded='ctrl.fullyLoaded'
-                     clear-client-sort-and-filter='ctrl.clearClientSortAndFilter()'
-                     client-view-loading-notification='ctrl.clientViewLoadingNotification'>
-      </mn-filter-bar>
+      <mn-filter-bar />
     </div>
   </div>
   <div class="row mn-grid-layout-row">
